src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  /* Light Mode Defaults */
  --color-bg: #FCFCFC;
  --color-bg-light: #F0F0F0;
  --color-primary: #E63946;
  --color-secondary: #0a0a0a;
  /* Headings -> Black */
  --color-text: #2d2d2d;
  /* Body -> Dark Gray */
  --color-text-dim: #525252;
}

.dark {
  /* Dark Mode Overrides */
  --color-bg: #050505;
  --color-bg-light: #121212;
  --color-primary: #E63946;
  --color-secondary: #F1FAEE;
  /* Headings -> White */
  --color-text: #A3A3A3;
  /* Body -> Light Gray */
  --color-text-dim: #737373;
}

::-webkit-scrollbar-track {
  @apply bg-bg;
}

::-webkit-scrollbar-thumb {
  @apply bg-bg-light border border-bg-light rounded-full;
}

::-webkit-scrollbar-thumb:hover {
  @apply bg-text;
}

.glass-card {
  @apply bg-bg-light backdrop-blur-md shadow-lg border border-white/5 hover:border-primary hover:-translate-y-1 transition-all duration-300;
}

